--- a/package.json
+++ b/package.json
@@ -7,19 +7,25 @@
     "start": "node node_modules/grunt-cli/bin/grunt serve"
   },
   "dependencies": {
-    "vue": "latest",
+    "async": "latest",
+    "browserify": "^4.1.6",
+    "connect-mongo": "latest",
+    "cookie-parser": "^1.1.0",
     "express": "^4.3.1",
     "express-session": "^1.2.1",
-    "cookie-parser": "^1.1.0",
-    "method-override": "^1.0.2",
-    "morgan": "^1.1.1",
-    "mongoose": "^3.8.11",
-    "connect-mongo": "latest",
-    "gulp": "^3.6.2",
-    "browserify": "^4.1.6",
     "forever": "latest",
+    "gulp": "^3.6.2",
+    "method-override": "^1.0.2",
+    "mongoose": "^3.8.11",
+    "morgan": "^1.1.1",
+    "passport": "^0.2.0",
+    "passport-facebook": "^1.0.3",
+    "passport-github": "^0.1.5",
+    "passport-google": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.2",
     "underscore": "^1.6.0",
-    "async": "latest"
+    "vue": "latest"
   },
   "devDependencies": {
     "bower": "^1.3.3",
